css/original.css
/* ... */
.main-page-description{
  transform: translate(-70%, -100%);
  width:40%;
  display: inline-block;
}

.hero .logo img{
  width: 80%; max-width: 600px;
  min-width: 300px;
}

.hero h2{
  padding-top:20px;
  padding:10px;
}

.hero h3{
  padding-bottom:0px;
  margin-bottom: 0px;
}


.hero .wrapper h1 {
  display: inline-block;
  padding-left: 10px 30px;
  padding-right: 10px 30px;
}

.hero .wrapper h2 {
  font-size: 28px;
  font-weight: 200;
}

.hero .wrapper h3 {
  font-size: 20px;
  font-weight: 200;
  padding-bottom: 35px;
}

#lab_social_icon_header a {
  color: #0F2C34;
}

#lab_social_icon_header .social:hover {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -o-transform: scale(1.1);
}

#lab_social_icon_header .social {
  -webkit-transform: scale(0.8);
  /* Browser Variations: */

  -moz-transform: scale(0.8);
  -o-transform: scale(0.8);
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
}
/*
    Multicoloured Hover Variations
*/

#lab_social_icon_header #social-fb:hover {
  color: #3B5998;
}

#lab_social_icon_header #social-tw:hover {
  color: #4099FF;
}

#lab_social_icon_header #social-in:hover {
  color: #cd486b;
}

#lab_social_icon_header #social-em:hover {
  color: #D099D5;
}

/* Button for Sponsorship */
#wrapper {
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.btn {
  border: none;
  display: block;
  text-align: center;
  cursor: pointer;
  text-transform: uppercase;
  outline: none;
  overflow: hidden;
  position: absolute;
  color: #fff;
  font-weight: 700;
  font-size: 15px;
  background-color: #0F2C34;
  padding: 17px 60px;
  margin: 0 auto;
  box-shadow: 0 5px 15px rgba(0,0,0,0.20);
}

.btn span {
  position: relative;
  z-index: 1;
}

.btn:after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  height: 490%;
  width: 140%;
  background: #78c7d2;
  -webkit-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out;
  -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
  transform: translateX(-98%) translateY(-25%) rotate(45deg);
}

.btn:hover:after {
  -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
  transform: translateX(-9%) translateY(-25%) rotate(45deg);
}
.hero .buttons {
  margin: 40px 0;
}


.hero .buttons a {
  background: #fff;
  border: 5px solid #0F2C34;
  border-radius: 40px;
  color: #0F2C34;
  display: inline;
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 700;
  padding: 10px 70px;
  text-decoration: none;
  text-transform: uppercase;
}

.hero .buttons a:hover,
.hero .buttons a:focus {
  background-color: #C3BDF1;
  color: #fff;
  transition: all 0.2s ease;
}

.hero .buttons a:not(:last-child) {
  margin-right: 10px;
}

.about {
  border-width: 15px 0;
  background-color:#edf0c7;
  padding: 100px 0;
  position: relative;
  white-space: nowrap;
  height:auto;
  overflow:hidden;
}

.about-section{
  top:40%;
  left:35%;
  position:absolute;
  padding:10px;
  width:50%;
  height:auto;
  word-wrap: break-word;
  color: #0F2C34;
  background: #EBF9F3;
  font-weight: 600;
  font-size: 22px;
  line-height: 1.6em;
  letter-spacing: -.3px;
  -webkit-box-shadow: 10px 10px 5px 0px rgba(197,212,206,1);
  -moz-box-shadow: 10px 10px 5px 0px rgba(197,212,206,1);
  box-shadow: 10px 10px 5px 0px rgba(197,212,206,1);
  white-space: normal;
}


.about-section p span {
  font-weight: 700;
  text-transform: uppercase;
}
.about .hex .middle {
    width: 104px;
    height: 60px;
    background: white;
}
.about .hex .bottom {
    width: 0;
    border-top: 30px solid white;
    border-left: 52px solid transparent;
    border-right: 52px solid transparent;
}
.about .hex .top {
    width: 0;
    border-bottom: 30px solid white;
    border-left: 52px solid transparent;
    border-right: 52px solid transparent;
}

/* Icon section */
section.icons{
  padding-top: 50px;
}

.icon-column {
    float: left;
    text-align: center;
    align-content:  center;
    list-style-position: inside;
    width: 33.33%;
    padding: 5px;
}

h2.icon{
  text-align: center;
}

/* Clear floats after the columns */
.icon-row:after {
    content: "";
    display: table;
    clear: both;
}
img.icon{
  width: 100%;
  max-width: 200px;
  max-height: 200px;
  margin: 0 auto;
  vertical-align: middle;
}
/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .icon-column {
        width: 100%;
    }
}
/* What Makes Us Different */
.different .hex .middle {
    width: 104px;
    height: 60px;
    background: white;
}
.different .hex .bottom {
    width: 0;
    border-top: 30px solid white;
    border-left: 52px solid transparent;
    border-right: 52px solid transparent;
}
.different .hex .top {
    width: 0;
    border-bottom: 30px solid white;
    border-left: 52px solid transparent;
    border-right: 52px solid transparent;
}
.different {
  border-width: 15px 0;
  background-color:#C7E3F0;
  padding: 100px 0;
  position: relative;
  height:auto;
  margin: 50px 0;
  white-space: nowrap;
  overflow:hidden;
  font-size: 1.2em;
}
h1.diff{
  text-align: center;
}
p.diff{
  white-space: normal;
  padding: 0 25%;

}
img.diff{
  margin: auto 0;
  max-width: 275px;
}
.col{
  float: left;
  text-align: center;
}

.text {
    width: 70%;
    white-space: normal;
    padding: 0 50px;
}
.image {
    width: 30%;
}

.diff-row{
  padding: 20px 0;
}

/* Clear floats after the columns */
.diff-row:after {
    content: "";
    display: table;
    clear: both;
}
/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .col {
        width: 100%;
    }
}


/*
 * Sponsors Section
 */

.sponsors {
  background-color: #fff;
  margin-top: 15px;

  position: relative;
}
/* ... */

